scripts/java-tron.conf: update ports

--- a/scripts/java-tron.conf
+++ b/scripts/java-tron.conf
@@ -71,7 +71,7 @@ node.backup {
 node {
   # trust node for solidity node
   # trustNode = "ip:port"
-  trustNode = "127.0.0.1:50051"
+  trustNode = "127.0.0.1:16669"
 
   # expose extension api to public or not
   walletExtensionApi = true
@@ -124,6 +124,7 @@ node {
 
   rpc {
     port = 16669
+    solidityPort = 16670
 
     # Number of gRPC thread, default availableProcessors / 2
     # thread = 16
