scripts: create network for TRON node, start at least 2 so that broadcasts work correctly

--- a/scripts/java-tron.conf
+++ b/scripts/java-tron.conf
@@ -54,10 +54,10 @@ storage {
 
 # this part of config is used to node discovery.
 node.discovery = {
-  enable = false  # you should set this entry value with true if you want your node can be discovered by other node.
+  enable = true  # you should set this entry value with true if you want your node can be discovered by other node.
   persist = true  # this entry is used to determined to whether storing the peers in the database or not.
-  bind.ip = ""
-  external.ip = 127.0.0.1
+  bind.ip = "#container_ip#"
+  external.ip = #container_ip#
 }
 
 # this part of config is used to set backup node for witness service.
@@ -72,6 +72,9 @@ node {
   # trust node for solidity node
   # trustNode = "ip:port"
   trustNode = "127.0.0.1:16669"
+
+  # Only require 2 witnesses for block generation
+  agreeNodeCount = 2
 
   # expose extension api to public or not
   walletExtensionApi = true
@@ -187,6 +190,8 @@ seed.node = {
   #   "ip:port"
   # ]
   ip.list = [
+  "172.255.0.101:16666",
+  "172.255.0.102:16666"
   ]
 }
 
