scripts: fix startup script

--- a/scripts/java-tron.conf
+++ b/scripts/java-tron.conf
@@ -74,7 +74,7 @@ node {
   trustNode = "127.0.0.1:16669"
 
   # Only require 2 witnesses for block generation
-  agreeNodeCount = 2
+  agreeNodeCount = 0
 
   # expose extension api to public or not
   walletExtensionApi = true
@@ -246,19 +246,31 @@ localwitness = [
 #]
 
 block = {
-  needSyncCheck = false # first node : false, other : true
+  needSyncCheck = #need_sync_check# # first node : false, other : true
   maintenanceTimeInterval = 21600000 // 1 day: 86400000(ms), 6 hours: 21600000(ms)
 }
 
 
 vm = {
   supportConstant = true
+  maxEnergyLimitForConstant = 100000000
   minTimeRatio = 0.0
   maxTimeRatio = 5.0
+  saveInternalTx = false
 }
 
 committee = {
   allowCreationOfContracts = 1  //mainnet:0 (reset by committee),test:1
+  allowMultiSign = 1
+  allowAdaptiveEnergy = 1
+  allowSameTokenName = 1
+  allowTvmTransferTrc10 = 1
+  # this caused us a lot of headaches - Constantinople upgrade must be enabled for smart contract code to be saved
+  # and for contract invocations to work.
+  allowTvmConstantinople = 1
+  allowTvmSolidity059 = 1
+  allowMarketTransaction = 1
+  allowTransactionFeePool = 1
 }
 
 event.subscribe = {
