updated committee of Java Tron config (#17)

--- a/scripts/java-tron.conf
+++ b/scripts/java-tron.conf
@@ -261,6 +261,7 @@ vm = {
 
 committee = {
   allowCreationOfContracts = 1  //mainnet:0 (reset by committee),test:1
+  allowUpdateAccountName = 1
   allowMultiSign = 1
   allowAdaptiveEnergy = 1
   allowSameTokenName = 1
@@ -271,6 +272,22 @@ committee = {
   allowTvmSolidity059 = 1
   allowMarketTransaction = 1
   allowTransactionFeePool = 1
+  allowDelegateResource = 1
+  allowTvmIstanbul = 1
+  allowShieldedTRC20Transaction = 1
+  changedDelegation = 1
+  allowOptimizeBlackHole = 1
+  allowTvmVote = 1
+  allowTvmLondon = 1
+  allowHigherLimitForMaxCpuTimeOfOneTx = 1
+  allowAssetOptimization = 1
+  allowNewReward = 1
+  memoFee = 1000000
+  allowDelegateOptimization = 1
+  unfreezeDelayDays = 1
+  allowTvmShangHai = 1
+  allowCancelAllUnfreezeV2 = 1
+  maxDelegateLockPeriod = 30
 }
 
 event.subscribe = {
