BCI-3328 Contract Validation Data Feeds E2E test (#18)
* integrate gauntlet

* adding nix files

* local test passing

* ci cleanup

* updated to http

* update ci name

* fixed ci formatting

* fixes to ci

* using gati and ssh for g++ accesss

* update ci

* moved artifacts to .manifest

* update lock file

* cleanup

* update nix file for tron

* updated token abi

* added link gauntlet tests

* updated go bindings

* working link token test

* updated keystone forwarder

* update GATI Secrets

* update revision

* update function to g++ changes

* update link token

* fixed burning

* initial datafeeds test

* update abi

* update json

* deploy contracts working

* fixed byte input for performUpkeep

* update df test

* update verifier proxy to remove logic of verification

* removed logic for datafeeds registry

* update abi

* updated g++ call op

* fixed artifacts test

* removed uncessary debug logs

* added teardown to tron node

* moved all contract tests to one folder

* created singleton e2e test instance

* cleanup code

* cleanup comment

* reduce shutdown delays

* updating runner

* reduce nix dependencies

* reduce size of nix

* nix max job one config

* updated runner size

* update branch

* update nix debug logs

* remove singleton tron instance

* update nix lock

* update command for more error logs

* changed to sh way of installing plugins

* update flake.nix

* use ci instead of nix

* update ci with gati

* update clone

* update ci

* fix ci

* g++ provider update

* switched back to nix ci

* Added ABI for DF1.0

* seperated df1.0 and df2.0 tests

* update abi

* updated df1.0 test

* added some fixes to the test

* abi updated

* tests for df1.0 passing

* removed private key

* Cleanup code

* added validation for median answer

* addressed comments

* added json rpc

* code cleanup

* reverted changes to genesis address

* added log validation

* cleanup tests names

* fixed go mod

* fix indentation for conf file

* update flake.loc

--- a/scripts/java-tron.conf
+++ b/scripts/java-tron.conf
@@ -154,6 +154,20 @@ node {
     minEffectiveConnection = 0
   }
 
+    jsonrpc {
+    # Note: If you turn on jsonrpc and run it for a while and then turn it off, you will not
+    # be able to get the data from eth_getLogs for that period of time.
+
+    # The ports have to be the same as the full node http ports.
+    # Example query https://developers.tron.network/reference/eth_getlogs
+    httpFullNodeEnable = true
+    httpFullNodePort = 16671
+    httpSolidityEnable = true
+    httpSolidityPort = 16672
+    # httpPBFTEnable = true
+    # httpPBFTPort = 8565
+  }
+
   # Whether to enable the node detection function, default false
   # nodeDetectEnable = false
 
@@ -170,7 +184,7 @@ node {
     # checkInterval = 600
   # }
 
-  dns {
+dns {
     # dns urls to get nodes, url format tree://{pubkey}@{domain}, default empty
     treeUrls = [
       #"tree://APFGGTFOBVE2ZNAB3CSMNNX6RRK3ODIRLP2AA5U4YFAA6MSYZUYTQ@nodes1.example.org",
