tron/scripts/java-tron.conf: enable committee.allowOptimizedReturnValueOfChainId

--- a/scripts/java-tron.conf
+++ b/scripts/java-tron.conf
@@ -302,6 +302,9 @@ committee = {
   allowTvmShangHai = 1
   allowCancelAllUnfreezeV2 = 1
   maxDelegateLockPeriod = 30
+
+  # this makes the chain id the last 4 bytes, same as EVM, versus the whole genesis block id when disabled.
+  allowOptimizedReturnValueOfChainId = 1
 }
 
 event.subscribe = {
