--- a/.github/workflows/tron-relayer.yml
+++ b/.github/workflows/tron-relayer.yml
@@ -35,4 +35,4 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run tests
-      run: cd tron/relayer && go test -v -count=1 -p=1 -tags=integration ./...
+      run: cd relayer && go test -v -count=1 -p=1 -tags=integration ./...
