--- a/.github/workflows/tron-gotron-sdk.yml
+++ b/.github/workflows/tron-gotron-sdk.yml
@@ -35,4 +35,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run tests
-        run: cd tron/relayer/gotron-sdk && go test ./...
+        run: cd relayer/gotron-sdk && go test ./...
