Adding a Flake and a default shell

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,10 @@ node_modules
 .local-mock-server
 
 # Keep some docs local
-docs/local/
+docs/local/**
+
+# Nix package build out-link - any 'result' folder in the tree
+**/result
+
+# Nix packaged script (impure builds) default output - any '.build' folder in the tree
+**/.build
