fix: action to run if relayer is changed

--- a/.github/workflows/tron-relayer.yml
+++ b/.github/workflows/tron-relayer.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: ./.github/actions/changes
         id: c
         with:
-          folder: tron
+          folder: relayer
 
   test:
     name: Integration Tests
