Add standard configuration

--- a/.github/workflows/gotron-sdk.yml
+++ b/.github/workflows/gotron-sdk.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: ./.github/actions/changes
         id: c
         with:
-          folder: tron
+          folder: tron/gotron-sdk
 
   test:
     name: Unit Tests
