Fix path + script permission

--- a/.github/workflows/relayer-build.yml
+++ b/.github/workflows/relayer-build.yml
@@ -20,7 +20,7 @@ jobs:
           nix_path: nixpkgs=channel:nixos-unstable
 
       - name: Run build
-        run: nix develop -c go build -v ./...
+        run: nix develop -c cd relayer && go build -v ./...
 
       - name: Run tests
         run: nix develop -c cd relayer && go test -v -count=1 -p=1 -tags=integration ./...
