Updated GH Actions to use proper secrets

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -29,15 +29,15 @@ jobs:
         id: setup-github-token
         uses: smartcontractkit/.github/actions/setup-github-token@ef78fa97bf3c77de6563db1175422703e9e6674f # setup-github-token@0.2.1
         with:
-          aws-role-arn: ${{ secrets.AWS_ROLE_ARN_GLOBAL_READ_ONLY }}
-          aws-lambda-url: ${{ secrets.GATI_LAMBDA_RELENG_URL }}
+          aws-role-arn: ${{ secrets.AWS_ROLE_ARN_GATI_READONLY }}
+          aws-lambda-url: ${{ secrets.AWS_LAMBDA_URL_GATI_READONLY }}
           aws-region: ${{ secrets.QA_AWS_REGION }}
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
         with:
           aws-region: ${{ secrets.QA_AWS_REGION }}
-          role-to-assume: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ secrets.AWS_ROLE_PUBLISH_ARN_STAGING }}
           role-duration-seconds: 3600
           mask-aws-account-id: true
       - name: Login to Amazon ECR
@@ -75,26 +75,22 @@ jobs:
 
       # TODO: consider fetching the image instead of building if it already exists on AWS.
       - name: Build chainlink image
+        env:
+          GIT_AUTH_TOKEN: ${{ steps.setup-github-token.outputs.access-token }}
         run: |
           cd temp/chainlink
-          docker buildx build --build-arg COMMIT_SHA=$(git rev-parse HEAD) -t local_chainlink -f core/chainlink.Dockerfile .
+          docker buildx build --secret id=GIT_AUTH_TOKEN --build-arg COMMIT_SHA=$(git rev-parse HEAD) -t local_chainlink -f core/chainlink.Dockerfile .
 
       - name: Check out repo
         uses: actions/checkout@v4
 
       - name: Build chainlink-tron image
         run: |
-          cd tron
           docker buildx build --build-arg BASE_IMAGE=local_chainlink -t chainlink-tron -f ./Dockerfile .
-
-      - name: Push chainlink-tron image
-        run: |
-          docker tag chainlink-tron ${{ env.CL_ECR }}:tron.${{ github.sha }}
-          docker push ${{ env.CL_ECR }}:tron.${{ github.sha }}
 
       - name: Run Tron Integration Test
         env:
-          CORE_IMAGE: ${{ env.CL_ECR }}:tron.${{ github.sha }}
+          CORE_IMAGE: chainlink-tron
           TEST_LOG_LEVEL: debug
         run: |
           cd integration-tests
