--- a/.github/workflows/relayer-publish.yml
+++ b/.github/workflows/relayer-publish.yml
@@ -38,4 +38,4 @@ jobs:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID_STAGING }}
       AWS_ROLE_PUBLISH_ARN: ${{ secrets.AWS_ROLE_PUBLISH_ARN_STAGING }}
       AWS_ROLE_GATI_ARN: ${{ secrets.AWS_ROLE_ARN_GATI_READONLY }}
-      AWS_LAMBDA_GATI_URL: ${{ secrets.AWS_LAMBDA_URL_GATI }}
+      AWS_LAMBDA_GATI_URL: ${{ secrets.AWS_LAMBDA_URL_GATI_READONLY }}
