--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -27,9 +27,9 @@ jobs:
     steps:
       - name: Setup GitHub Token
         id: setup-github-token
-        uses: smartcontractkit/.github/actions/setup-github-token@ef78fa97bf3c77de6563db1175422703e9e6674f # setup-github-token@0.2.1
+        uses: smartcontractkit/.github/actions/setup-github-token@setup-github-token/v1
         with:
-          aws-role-arn: ${{ secrets.AWS_ROLE_ARN_GATI_READONLY }}
+          aws-role-arn: ${{ secrets.AWS_OIDC_CHAINLINK_READ_ONLY_TOKEN_ISSUER_ROLE_ARN }}
           aws-lambda-url: ${{ secrets.AWS_LAMBDA_URL_GATI_READONLY }}
           aws-region: ${{ secrets.QA_AWS_REGION }}
 
@@ -56,7 +56,7 @@ jobs:
           fi
 
       - name: Checkout chainlink repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           repository: smartcontractkit/chainlink
           ref: ${{ env.CUSTOM_CORE_REF || env.DEFAULT_CORE_REF }}
@@ -82,7 +82,7 @@ jobs:
           docker buildx build --secret id=GIT_AUTH_TOKEN --build-arg COMMIT_SHA=$(git rev-parse HEAD) -t local_chainlink -f core/chainlink.Dockerfile .
 
       - name: Check out repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Build chainlink-tron image
         run: |
